# NCS_CS_1.1L.10.20_consumer

NCS_CS_1.1L.10.20_consumer/: ACT_DEFINES  ACT_OUI  Makefile  act_build_inventory  do_act_build  make.common
NCS_CS_1.1L.10.20_consumer/aei_makesys/: aei_private.mk.defines  aei_wxx6000_host.modules  aei_wxx6000_host.prj  app_module.sample.mk  defrules.mk  lib_module.sample.mk  makeapp.mk  makecommon.mk  makelib.mk  project_config.mk  toolchains.mk  travel_dir.mk  travel_dir.sample.mk
NCS_CS_1.1L.10.20_consumer/aei_private/aei_makesys/: aei_private.mk.defines
NCS_CS_1.1L.10.20_consumer/aei_private/hosttools/aeiImageSign/: Makefile  aei_img_sign  aei_img_sign.map
NCS_CS_1.1L.10.20_consumer/bcmdrivers/: Makefile
NCS_CS_1.1L.10.20_consumer/customers/NCS/BCM63138/: DEFINES  version.make
NCS_CS_1.1L.10.20_consumer/customers/NCS/WPB6000/: DEFINES  version.make
NCS_CS_1.1L.10.20_consumer/customers/NCS/WXX6000/: DEFINES  version.make
NCS_CS_1.1L.10.20_consumer/customers/NCS_CS/WXX6000/: version.make
NCS_CS_1.1L.10.20_consumer/hostTools/: addvtoken  cmplzma  createimg
NCS_CS_1.1L.10.20_consumer/hostTools/fakeroot/: Makefile  config.status  libtool
NCS_CS_1.1L.10.20_consumer/hostTools/fakeroot/doc/: Makefile
NCS_CS_1.1L.10.20_consumer/hostTools/fakeroot/scripts/: Makefile
NCS_CS_1.1L.10.20_consumer/hostTools/fakeroot/test/: Makefile
NCS_CS_1.1L.10.20_consumer/hostTools/libcreduction/: Makefile
NCS_CS_1.1L.10.20_consumer/hostTools/scripts/: bcmImageMaker  defconfig-bcm.template
NCS_CS_1.1L.10.20_consumer/hostTools/scripts/gendefconfig.d/: 15general.conf  20flashfs.conf  20netfilter.conf
NCS_CS_1.1L.10.20_consumer/kernel/linux-3.4rt/: Kconfig.bcm  Kconfig.bcm_kf  Makefile
NCS_CS_1.1L.10.20_consumer/kernel/linux-3.4rt/kernel/: signal.c
NCS_CS_1.1L.10.20_consumer/shared/opensource/drivers/: bcm_ethsw_impl1.c  bcm_led_impl1.c  bcm_misc_hw_init_impl1.c  bcm_pinmux_impl2.c
NCS_CS_1.1L.10.20_consumer/shared/opensource/flash/: nandflash.c  spiflash.c  spinandflash.c
NCS_CS_1.1L.10.20_consumer/shared/opensource/rdp/: Makefile  rdp_cpu_ring.c  rdp_drv_bbh.c  rdp_drv_bpm.c
NCS_CS_1.1L.10.20_consumer/shared/opensource/utils/: shared_utils.c
NCS_CS_1.1L.10.20_consumer/targets/: buildFS  buildFS2
NCS_CS_1.1L.10.20_consumer/targets/963268GW/: 963268GW  963268GW.bak
NCS_CS_1.1L.10.20_consumer/targets/arch/: DPI.arch
NCS_CS_1.1L.10.20_consumer/targets/cfe/: bcm63138_spi_prog_nand_cfe.w
NCS_CS_1.1L.10.20_consumer/targets/fs.src/etc/: cacerts.pem  inittab  passwd.manu  qcsapi_target_ip.conf  rsa_host_key
NCS_CS_1.1L.10.20_consumer/userspace/: Makefile
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/: Makefile
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  PORTS  README  README.spoof  aclocal.m4  configure  configure.in  dist.conf  dist.conf.in  syslog-ng.spec  syslog-ng.spec.bb  syslog-ng.spec.bb.in  syslog-ng.spec.in
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/contrib/: Makefile.in  README
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/debian/: FAQ.unofficial.html  README.Debian  changelog  changelog.in  control  copyright  expanded-syslog-ng.conf  rules  syslog-ng.default  syslog-ng.docs  syslog-ng.examples  syslog-ng.files  syslog-ng.init
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/debian/CVS/: Entries  Repository  Tag
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/debian/patches/CVS/: Repository
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/doc/: Makefile.am  Makefile.in  stresstest.sh  syslog-ng.8  syslog-ng.conf.5  syslog-ng.conf.demo  syslog-ng.old.txt
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/doc/sgml/: Makefile.am  Makefile.in  syslog-ng.txt  syslog-ng.xml
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/files/: syslog-ng.conf  syslog-ng.init
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/libol-0.3.18/: ChangeLog  Makefile.am  Makefile.in  autogen.sh  configure  configure.in  libol-config.in  libol.spec  libol.spec.in
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/libol-0.3.18/src/: Makefile.am  Makefile.in  abstract_io.c  abstract_io.h.x  alist.c  alist.c.x  alist.h.x  combinators.c.x  command.c.x  command.h.x  format.c  gc.c  io.c  io.c.x  io.h.x  io_commands.c.x  io_commands.h.x  jpoll.c  list.c  list.h.x  olconfig.h  olconfig.h.in  pkt_buffer.c  pkt_buffer.c.x  queue.c  queue.h.x  read_line.c  read_line.c.x  read_line.h.x  resource.c  resource.h.x  stream_buffer.c  stream_buffer.c.x  werror.c  xalloc.c
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/libol-0.3.18/src/.libs/: libol-config
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/libol-0.3.18/utils/: Makefile.am  Makefile.in  make_class.in
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/solbuild/: README.Solaris  pkginfo  prototype-maker.sh  rules  syslog-ng.init.d
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/solbuild/CVS/: Entries  Repository  Root
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/src/: .project  Makefile.am  Makefile.in  affile.c  affile.c.x  affile.h  afinet.c  afinet.c.x  afinter.c  afinter.h  afprogram.c  afprogram.c.x  afprogram.h  afremctrl.c  afremctrl.c.x  afremctrl.h  afsocket.c  afsocket.c.x  afsocket.h  afsocket.h.x  afstreams.c  afstreams.c.x  afstreams.h  afunix.c  afunix.c.x  afuser.c  afuser.c.x  afuser.h  center.c  center.c.x  center.h  center.h.x  cfg-grammar.c  cfg-grammar.h  cfg-grammar.y  cfg-lex.c  cfg-lex.l  cfgfile.c  cfgfile.h  cfgfile.h.x  (+31 more)
NCS_CS_1.1L.10.20_consumer/userspace/gpl/apps/aei_syslog-ng/src/src/tests/: Makefile.am  Makefile.in  syslog-ng.conf.eval  syslog-ng.conf.logflags  test.eval  test.logflags  test_nscache.c  testall
NCS_CS_1.1L.10.20_consumer/userspace/gpl/libs/: Makefile
NCS_CS_1.1L.10.20_consumer/userspace/private/apps/: .gitignore  Makefile
(+886 files in other folders)
